# openxr

./: .gitignore  Cargo.toml  build.rs
src/: fullscreen.wgsl  main.rs  sample.wgsl  xr.rs
